--- a/About.html
+++ b/About.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color:slateblue;"></body>
+<body style="background-color:white;"></body>
 <head>
 	<title>Teaching learning materials in Dzongkha</title>
 		<link rel="stylesheet"type="text/css" href="style.css">
@@ -7,19 +7,22 @@
 </head>
 <body>
 
-	<div style="text-align:right; top-margin;">
+	<div style="font-size:20px;text-align:right; top-margin;">
 		<a style="padding-left: 50px;" href="index.html"> Home</a>
 		<a style="padding-left: 50px;" href="About.html"> About</a>
 		<a style="padding-left: 50px;" href="Services.html"> Services</a>
 		
 	</div>
 </header>
-<div style="text-align: center;font-family:san-serif; font-size: 20px; font-color:blue"<br>
-	<h1 style="font-color:blue;text-align:center;">ན་གཞོན་རིག་འཕེལ་གྱི་ཁུངས་དོན།</h1></div><br>
+	<h1 style="font-size:50px;font-color:blue;text-align:center;margin-bottom: 30px;">ན་གཞོན་རིག་འཕེལ་གྱི་ཁུངས་དོན།</h1></div><br>
 
-<div style="text-align: justify;"</d>
-	<img src="page.jpg">
+<p style="font-size: 25px;text-color:white;text-align: justify;margin-bottom:20px;"> ན་གཞོན་རིག་འཕེལ་གྱི་མི་སྡེ་བརྡ་བརྒྱུད་འདི་ནང་ལས་  སློབ་དཔོན་དང་སློབ་ཕྲུག་ལུ་ དགོས་མཁོ་ཆེ་བའི་ ལྷབ་སྟོན་མཁོ་ཆས་དང་ སྟོན་ཆས་ཚུ་ རྫོང་ཁའི་ཐོག་ལུ་ ཐོབ་ཚུགསཔ་ཨིན། དེ་ཡང་ སློབ་དཔོན་ཚུ་ལུ་ཨིན་པ་ཅིན་ སློབ་སྟོན་འབད་བའི་སྐབས་ལུ་ མཁོ་ཆེ་བའི་ སྟོན་ཆས་དང་ སྦྱོང་ལཱ་འབད་ནིའི་དོན་ལུ་ ལཱ་ཤོག་ཚུ་ རང་གིས་སྦེ་བཅའ་སྒྲིག་རྐྱབ་མ་དགོ་པའི་ དེ་ནང་ལས་འཇམ་ཏོག་ཏོ་སྦེ་ཐོབ་ཚུགསཔ་ཨིན། སྟོན་ཆས་དང་སྦྱོང་ལཱའི་ལཱ་ཤོག་ཚུ་ཡང་ དོན་ཚན་དང་འཁྲིལ་ཏེ་ སློབ་རིམ་གྱི་གནས་ཚད་ལུ་གཞི་བཞག་སྟེ་བཟོ་ཡོདཔ་ཨིན། <br> དེ་བཟུམ་སྦེ་ སློབ་ཕྲུག་ཚུ་ལུ་ཨིན་པ་ཅིན་ དུས་རྒྱུན་གྱི་སློབ་ཁང་ནང་ལུ་ སློབ་དཔོན་གྱིས་སློབ་སྟོན་འབད་བའི་དོན་ཚན་ཚུ་ལུ་ རང་གི་ཤེས་ཡོན་རྒྱ་སྐྱེད་དང་ཁ་སྐོང་ལྷན་ཐབས་ཀྱི་དོན་ལུ་ སློབ་ཁང་ཆོས་རྒྱུགས་ཀྱི་དྲི་བ། སློབ་ཁང་ཟིན་བྲིས།  སྐད་ཡིག་དང་ཡིག་སྦྱོར། སྲུང་་དང་སྙན་རྩོམ་ལ་སོགས་པ་  སྤྱི་རིགས་སྣ་ཚོགས་སྦེ་ ཐོབ་ཚུགསཔ་ཨིན།</p>
 
-	</body>
-	</html>
+
+<div style="font-size:25px;text-align:center; bottom-margin";>
+
+རྩོམ་སྒྲིག་པ།
+
+</body>
+</html>
 	
