--- a/Services.html
+++ b/Services.html
@@ -1,15 +1,14 @@
 <html>
-<body style="background-color: burlywood;"</body>
+<body style="background-color:white;"</body>
 <head>
 	<title>Teaching learning materials in Dzongkha</title>
 		<link rel="stylesheet"type="text/css" href="style.css">
 
 </head>
 <body>
+	<div style="top-margin:50px;">
 
-<div style="text-align:center;"><img src="logo.jpg"></div>
-
-	<div style="text-align:right; top-margin;">
+	<div style="font-size:20px;text-align:right;">
 		<a style="padding-left: 20px;" href="index.html"> Home</a>
 		<a style="padding-left: 20px;" href="About.html"> About</a>
 		<a style="padding-left: 20px;" href="services.html"> Services</a>
@@ -19,10 +18,16 @@
 <div>
 	<h1 style=font-size;50px;text-align:center;About the teaching learning materials</h1>
 		<br>
+</header>
+	<h1 style="font-size:50px;font-color:blue;text-align:center;margin-bottom: 30px;">ཞབས་ཏོག།</h1></div><br>
 
-	<p style= font:Uchen,fontsize,20px,text-center; width:40%;> ཞབས་ཏོག </p><br>
-	སློབ་དཔོན་དང་སློབ་ཕྲུག་གཉིས་ཆའི་དོན་ལུ་ ལྷབ་སྦྱང་དང་སློབ་སྟོན་གྱི་མཁོ་ཆས་ཚུ་ ཐོབ་ཚུགསཔ་ཨིན།	
-	
+<p style="font-size: 25px;text-color:white;text-align: justify;margin-bottom:20px;"> ཞབས་ཏོག་ཚུ་ཡང་ སློབ་དཔོན་དང་སློབ་ཕྲུག་གཉིས་ཆ་རའི་དོན་ལུ་  གློག་རིག་གི་མཐུན་རྐྱེན་ཚུ་་ དེང་སང་དུས་རབས་༢༡པའི་ གློག་རིག་བརྡ་འཕྲུལ་གྱི་སྟོན་ཆས་ཚུ་གི་ཞབས་ཏོག་ཕུལཝ་ཨིན། དེ་ལས་ སློབ་དཔོན་ཚུ་གི་དོན་ལུ་ དྲི་བ། འབྲི་རྩོམ། སྙན་རྩོམ། བསླབ་བྱ། དཔེ་གཏམ།  སྲུང་། རྩང་མོ། རྒྱལ་སྲས་ལག་ལེན་གྱི་ལྷབ་སྦྱང་སྟོན་ཆས།  དེ་ལས་ སློབ་ཕྲུག་ཚུ་གི་སྦྱོང་ལཱ་ལཱ་ཤོག་ཚུ་ ག་ར་ཚངམ་སྦེ་ཕུལ་མ་ཚུགས་རུང་ ལངམ་སྦེ་ ཐོབ་ཚུགསཔ་སྦེ་ཡོདཔ་ཨིན།<br> དེ་ལས་ གཞན་ཡང་ སློབ་ཁང་འཛིན་སྐྱོང་དང་འབྲེལ་བའི་མཐུན་རྐྱེན་ཚུ་ཡང་ འཇམ་ཏོག་ཏོ་སྦེ་ སྤྱོད་ཆོགཔ་སྦེ་ བཙུགས་བཞག་ཡོདཔ་ད་  ཡོངས་འབྲེལ་གཞན་དང་འབྲེལ་མཐུད་འབད་ནིའི་དོན་ལུ་ སྦྲེལ་ལམ་ཚུ་ཡང་བཙུགས་བཞག་ཡོདཔ་ཨིན། དེ་ལས་ སློབ་སྟོན་འབྲེལ་བའི་ གློག་ཐུང་ཚུ་ཡང་ ཐོབ་ཚུགསཔ་ཨིན། དེ་ཚུ་ག་ར་ རང་གིས་སློབ་སྟོན་འབད་བའི་ ཉམས་མྱོང་ཁོ་ནང་དང་ མཁས་པ་གཞན་གྱི་རིག་ལམ་ལུ་སྟོན་པའི་ མཐུན་རྐྱེན་གཞན་ཡང་ སྤྱོད་ཚུགསཔ་ཨིན།</p>
+
+
+<div style="font-size:25px;text-align:left; bottom-margin";>
+
+རྩོམ་སྒྲིག་པ།
+
 	
 		
 
