--- a/index.html
+++ b/index.html
@@ -1,34 +1,29 @@
 <html>
-<body style="background-color: lightgoldenrodyellow;"></body>
-
-<div style="text-align:center;margin-top:40px;"><img src="logo.jpg"></div>
-<div style="text-align:center;"><img src=""></div>
-
-	<div style="text-align:center; top-margin:35;">
+<div style="text-align:center;margin-top:10px;"><img src="logo.jpg"></div>
+ <div style="text-align:right;color:black;"</div>
+	<br>
+	
+	<div style="font-size:25px;text-align:center;margin-top:50px;">
 		<a style="padding-left: 20px;" href="index.html"> Home</a>
 		<a style="padding-left: 20px;" href="About.html"> About</a>
-		<a style="padding-left: 20px;" href="services.html"> Services</a>
-<h1 style="font-size: 40px; font-family: cursive;text-align: center;">Your Choice</h1>
-<p style="font-size: 20px;text-color:white;text-align: center;margin-bottom:50px;"> སློབ་དཔོན་ཚུ་གི་སློབ་མཁོ་ཆས་དང་ སྦྱོང་ལཱ་དང་འབྲེལ་བའི་སྦྱོང་ལཱའི་ལཱ་ཤོག་ཚུ་ ག་ཅི་དགོ་རུང་ སྦྲེལ་ལམ་དེ་ནང་ལས་ ཐོབ་ཚུགསཔ་ཨིན། དེ་དང་གཅིག་ཁར་ སློབ་ཕྲུག་ཚུ་ལུ་ དགོ་པའི་ ལྷབ་སྟོན་མཁོ་ཆས་ ཚུ་ཡང་སྤུས་ཚད་ཡོདཔ་སྦེ་ དེ་ནང་ལས་ ཐོབ་ཚུགསཔ་ཨིན།</p>
+		<a style="padding-left: 20px;" href="services.html"> Services</a></div>
+
+<h1 style="font-size: 30px;text-align: center;margin-bottom:85px;">Your Choice</h1>
+<p style="font-size: 25px;text-color:black;text-align: justify;margin-bottom:20px;"> ན་གཞོན་རིག་འཕེལ་གྱི་མི་སྡེ་བརྡ་བརྒྱུད་འདི་ནང་ལས་  སློབ་དཔོན་དང་སློབ་ཕྲུག་ལུ་ དགོས་མཁོ་ཆེ་བའི་ ལྷབ་སྟོན་མཁོ་ཆས་དང་ སྟོན་ཆས་ཚུ་ རྫོང་ཁའི་ཐོག་ལུ་ ཐོབ་ཚུགསཔ་ཨིན། དེ་ཡང་ སློབ་དཔོན་ཚུ་ལུ་ཨིན་པ་ཅིན་ སློབ་སྟོན་འབད་བའི་སྐབས་ལུ་ མཁོ་ཆེ་བའི་ སྟོན་ཆས་དང་ སྦྱོང་ལཱ་འབད་ནིའི་དོན་ལུ་ ལཱ་ཤོག་ཚུ་ རང་གིས་སྦེ་བཅའ་སྒྲིག་རྐྱབ་མ་དགོ་པའི་ དེ་ནང་ལས་འཇམ་ཏོག་ཏོ་སྦེ་ཐོབ་ཚུགསཔ་ཨིན། སྟོན་ཆས་དང་སྦྱོང་ལཱའི་ལཱ་ཤོག་ཚུ་ཡང་ དོན་ཚན་དང་འཁྲིལ་ཏེ་ སློབ་རིམ་གྱི་གནས་ཚད་ལུ་གཞི་བཞག་སྟེ་བཟོ་ཡོདཔ་ཨིན། <br> དེ་བཟུམ་སྦེ་ སློབ་ཕྲུག་ཚུ་ལུ་ཨིན་པ་ཅིན་ དུས་རྒྱུན་གྱི་སློབ་ཁང་ནང་ལུ་ སློབ་དཔོན་གྱིས་སློབ་སྟོན་འབད་བའི་དོན་ཚན་ཚུ་ལུ་ རང་གི་ཤེས་ཡོན་རྒྱ་སྐྱེད་དང་ཁ་སྐོང་ལྷན་ཐབས་ཀྱི་དོན་ལུ་ སློབ་ཁང་ཆོས་རྒྱུགས་ཀྱི་དྲི་བ། སློབ་ཁང་ཟིན་བྲིས།  སྐད་ཡིག་དང་ཡིག་སྦྱོར། སྲུང་་དང་སྙན་རྩོམ་ལ་སོགས་པ་  སྤྱི་རིགས་སྣ་ཚོགས་སྦེ་ ཐོབ་ཚུགསཔ་ཨིན།
+</p>
 
 <hr>
-<h1 style="font-size:20px; text-align: center;">Our Materials</h1>
 
-<img style="width:10%;"src="photo1.jpg"
-
-
-		
-	</div>
-</header>
 <div>
 <h2 style="font-size;50px;text-align:center;>Design your own materials</h2>
 <br>
 
 <p style= "font-size:20px,text-align
-:center; width:40%;> Dzongkha Teaching Learning Materials</p></d>
+:center; width:40%;color:blue> Tap the button to get you registered!</p></d>
 <div>
-		<button type="button"><a style="font-size:20px;padding:15px; 35px; 35px;color:red;"><a href="https://forms.gle/jQfLAYymGdYoNZmu9">Register for materials </button>
-		<button type="button"><a style="font-size:20px; padding:15px;35px; 35px;"><a href="https://www.youtube.com/@nazhoenrigphel5116">Subscribe the youtube</button>
+		<button type="button"><a style="line-height:2.5;padding:20px; 35px; 35px;color:blue;"><a href="https://forms.gle/jQfLAYymGdYoNZmu9">Registration</button>
+		<button type="button"><a style="text-aligh:center;line-height:2.5; padding:15px;35px; 35px;width:10%;"><a href="https://www.youtube.com/@nazhoenrigphel5116">Subscribe the youtube</button>
+	
 	</div>
 
 	
