--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
  <div style="text-align:right;color:black;"</div>
 	<br>
 	
-	<div style="font-size:25px;text-align:center;margin-top:50px;">
+	<div style="font-size:20px;text-align:center;text-transform:uppercase; margin-top:50px;">
 		<a style="padding-left: 20px;" href="index.html"> Home</a>
 		<a style="padding-left: 20px;" href="About.html"> About</a>
 		<a style="padding-left: 20px;" href="services.html"> Services</a></div>
 
 <h1 style="font-size: 30px;text-align: center;margin-bottom:85px;">Your Choice</h1>
-<p style="font-size: 25px;text-color:black;text-align: justify;margin-bottom:20px;"> ན་གཞོན་རིག་འཕེལ་གྱི་མི་སྡེ་བརྡ་བརྒྱུད་འདི་ནང་ལས་  སློབ་དཔོན་དང་སློབ་ཕྲུག་ལུ་ དགོས་མཁོ་ཆེ་བའི་ ལྷབ་སྟོན་མཁོ་ཆས་དང་ སྟོན་ཆས་ཚུ་ རྫོང་ཁའི་ཐོག་ལུ་ ཐོབ་ཚུགསཔ་ཨིན། དེ་ཡང་ སློབ་དཔོན་ཚུ་ལུ་ཨིན་པ་ཅིན་ སློབ་སྟོན་འབད་བའི་སྐབས་ལུ་ མཁོ་ཆེ་བའི་ སྟོན་ཆས་དང་ སྦྱོང་ལཱ་འབད་ནིའི་དོན་ལུ་ ལཱ་ཤོག་ཚུ་ རང་གིས་སྦེ་བཅའ་སྒྲིག་རྐྱབ་མ་དགོ་པའི་ དེ་ནང་ལས་འཇམ་ཏོག་ཏོ་སྦེ་ཐོབ་ཚུགསཔ་ཨིན། སྟོན་ཆས་དང་སྦྱོང་ལཱའི་ལཱ་ཤོག་ཚུ་ཡང་ དོན་ཚན་དང་འཁྲིལ་ཏེ་ སློབ་རིམ་གྱི་གནས་ཚད་ལུ་གཞི་བཞག་སྟེ་བཟོ་ཡོདཔ་ཨིན། <br> དེ་བཟུམ་སྦེ་ སློབ་ཕྲུག་ཚུ་ལུ་ཨིན་པ་ཅིན་ དུས་རྒྱུན་གྱི་སློབ་ཁང་ནང་ལུ་ སློབ་དཔོན་གྱིས་སློབ་སྟོན་འབད་བའི་དོན་ཚན་ཚུ་ལུ་ རང་གི་ཤེས་ཡོན་རྒྱ་སྐྱེད་དང་ཁ་སྐོང་ལྷན་ཐབས་ཀྱི་དོན་ལུ་ སློབ་ཁང་ཆོས་རྒྱུགས་ཀྱི་དྲི་བ། སློབ་ཁང་ཟིན་བྲིས།  སྐད་ཡིག་དང་ཡིག་སྦྱོར། སྲུང་་དང་སྙན་རྩོམ་ལ་སོགས་པ་  སྤྱི་རིགས་སྣ་ཚོགས་སྦེ་ ཐོབ་ཚུགསཔ་ཨིན།
+<p style="font-size: 25px;text-color:black;text-align: justify;margin-bottom:20px;"> ན་གཞོན་རིག་འཕེལ་གྱི་མི་སྡེ་བརྡ་བརྒྱུད་འདི་ནང་ལས་  སློབ་དཔོན་དང་སློབ་ཕྲུག་ལུ་ དགོས་མཁོ་ཆེ་བའི་ ལྷབ་སྟོན་མཁོ་ཆས་དང་སྟོན་ཆས་ཚུ་ རྫོང་ཁའི་ཐོག་ལུ་ ཐོབ་ཚུགསཔ་ཨིན། དེ་ཡང་ སློབ་དཔོན་ཚུ་ལུ་ཨིན་པ་ཅིན་ སློབ་སྟོན་འབད་བའི་སྐབས་ལུ་ མཁོ་ཆེ་བའི་ སྟོན་ཆས་དང་ སྦྱོང་ལཱ་འབད་ནིའི་དོན་ལུ་ སྦྱོང་ལཱ་ལཱ་ཤོག་ཚུ་ རང་གིས་སྦེ་བཅའ་སྒྲིག་རྐྱབ་མ་དགོ་པར་ འཇམ་ཏོག་ཏོ་སྦེ་ཐོབ་ཚུགསཔ་ཨིན། སྟོན་ཆས་དང་སྦྱོང་ལཱའི་ལཱ་ཤོག་ཚུ་ཡང་ དོན་ཚན་དང་འཁྲིལ་ཏེ་ སློབ་རིམ་གྱི་གནས་ཚད་ལུ་གཞི་བཞག་སྟེ་བཟོ་ཡོདཔ་ཨིན། <br> དེ་བཟུམ་སྦེ་ སློབ་ཕྲུག་ཚུ་ལུ་ཨིན་པ་ཅིན་ དུས་རྒྱུན་གྱི་སློབ་ཁང་ནང་ལུ་ སློབ་དཔོན་གྱིས་སློབ་སྟོན་འབད་བའི་དོན་ཚན་ཚུ་ལུ་ རང་གི་ཤེས་ཡོན་རྒྱ་སྐྱེད་དང་ཁ་སྐོང་ལྷན་ཐབས་ཀྱི་དོན་ལུ་ སློབ་ཁང་ཆོས་རྒྱུགས་ཀྱི་དྲི་བ། སློབ་ཁང་ཟིན་བྲིས།  སྐད་ཡིག་དང་ཡིག་སྦྱོར། སྲུང་་དང་སྙན་རྩོམ་ལ་སོགས་པ་  སྤྱི་རིགས་སྣ་ཚོགས་སྦེ་ ཐོབ་ཚུགསཔ་ཨིན། ད་རུང་ དེ་ནང་ལས་  སློབ་ཕྲུག་ཚུ་གི་དོན་ལུ་ ཨིང་སྐད་ནང་ཡོད་པའི་སྲུང་ཐུང་ཀུ་ཚུ་ཡང་ ན་གཞོན་ཨ་ལོ་ཚུ་གི་ རྫོང་ཁའི་ལྷབ་སྦྱང་ཡར་རྒྱས་གཏང་ནིའི་དོན་ལུ་ རྫོང་ཁའི་ཐོག་ལུ་ སྐད་སྒྱུར་འབད་དེ་ཡོདཔ་ཨིན། དེ་དང་གཅིག་ཁར་  ཕམ་གི་ཁ་རྒྱུན་དང་མཐོང་ཐོས་ཉམས་མྱོང་ལུ་གཞི་བཞག་པའི་སྲུང་ཚུ་ཡང་ འབྲུག་གི་རྒྱལ་ཡོངས་སྐད་ཡིག་ ཡར་རྒྱས་གཏང་ནིའི་དོན་ལུ་ སྤྲོ་བ་ཆེ་བའི་ལྷབ་སྦྱང་གི་རིགས་ཚུ་ དེ་ནང་ལས་ ཐོབ་ཚུགསཔ་ཨིན།
 </p>
+<h2>
+	<div style="text-align:center;margin-bottom:10px;"><img src="story image.gif"></div>
+</h2>
 
 <hr>
 
@@ -21,12 +24,11 @@
 <p style= "font-size:20px,text-align
 :center; width:40%;color:blue> Tap the button to get you registered!</p></d>
 <div>
-		<button type="button"><a style="line-height:2.5;padding:20px; 35px; 35px;color:blue;"><a href="https://forms.gle/jQfLAYymGdYoNZmu9">Registration</button>
-		<button type="button"><a style="text-aligh:center;line-height:2.5; padding:15px;35px; 35px;width:10%;"><a href="https://www.youtube.com/@nazhoenrigphel5116">Subscribe the youtube</button>
+		<button type="button"><a style="line-height:2.5;padding:20px;text-transform-uppercase;color:blue;"><a href="https://forms.gle/jQfLAYymGdYoNZmu9">REGISTRATION</button>
+		<button type="button"><a style="text-aligh:center;line-height:2.5; padding:20px;width:25%;"><a href="https://www.youtube.com/@nazhoenrigphel5116">SUBSCRIBE the YouTUBE</button>
 	
 	</div>
 
-	
 	</body>
 	</html>
 	
