--- a/About.html
+++ b/About.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 
-	<div style="font-size:20px;text-align:right; top-margin;">
-		<a style="padding-left: 50px;" href="index.html"> Home</a>
-		<a style="padding-left: 50px;" href="About.html"> About</a>
-		<a style="padding-left: 50px;" href="Services.html"> Services</a>
+	<div style="font-size:20px;text-align:right;word-spacing:1px;-spacing:5px; top-margin;">
+		<a style="padding-left: 30px;" href="index.html"> HOME</a>
+		<a style="padding-left: 30px;" href="About.html"> ABOUT</a>
+		<a style="padding-left: 30px;" href="Services.html"> SERVICES</a>
 		
 	</div>
 </header>
-	<h1 style="font-size:50px;font-color:blue;text-align:center;margin-bottom: 30px;">ན་གཞོན་རིག་འཕེལ་གྱི་ཁུངས་དོན།</h1></div><br>
+	<h1 style="font-size:50px;font-color:blue;text-align:center;margin-bottom: 30px;">དམིགས་དོན།</h1></div><br>
 
-<p style="font-size: 25px;text-color:white;text-align: justify;margin-bottom:20px;"> ན་གཞོན་རིག་འཕེལ་གྱི་མི་སྡེ་བརྡ་བརྒྱུད་འདི་ནང་ལས་  སློབ་དཔོན་དང་སློབ་ཕྲུག་ལུ་ དགོས་མཁོ་ཆེ་བའི་ ལྷབ་སྟོན་མཁོ་ཆས་དང་ སྟོན་ཆས་ཚུ་ རྫོང་ཁའི་ཐོག་ལུ་ ཐོབ་ཚུགསཔ་ཨིན། དེ་ཡང་ སློབ་དཔོན་ཚུ་ལུ་ཨིན་པ་ཅིན་ སློབ་སྟོན་འབད་བའི་སྐབས་ལུ་ མཁོ་ཆེ་བའི་ སྟོན་ཆས་དང་ སྦྱོང་ལཱ་འབད་ནིའི་དོན་ལུ་ ལཱ་ཤོག་ཚུ་ རང་གིས་སྦེ་བཅའ་སྒྲིག་རྐྱབ་མ་དགོ་པའི་ དེ་ནང་ལས་འཇམ་ཏོག་ཏོ་སྦེ་ཐོབ་ཚུགསཔ་ཨིན། སྟོན་ཆས་དང་སྦྱོང་ལཱའི་ལཱ་ཤོག་ཚུ་ཡང་ དོན་ཚན་དང་འཁྲིལ་ཏེ་ སློབ་རིམ་གྱི་གནས་ཚད་ལུ་གཞི་བཞག་སྟེ་བཟོ་ཡོདཔ་ཨིན། <br> དེ་བཟུམ་སྦེ་ སློབ་ཕྲུག་ཚུ་ལུ་ཨིན་པ་ཅིན་ དུས་རྒྱུན་གྱི་སློབ་ཁང་ནང་ལུ་ སློབ་དཔོན་གྱིས་སློབ་སྟོན་འབད་བའི་དོན་ཚན་ཚུ་ལུ་ རང་གི་ཤེས་ཡོན་རྒྱ་སྐྱེད་དང་ཁ་སྐོང་ལྷན་ཐབས་ཀྱི་དོན་ལུ་ སློབ་ཁང་ཆོས་རྒྱུགས་ཀྱི་དྲི་བ། སློབ་ཁང་ཟིན་བྲིས།  སྐད་ཡིག་དང་ཡིག་སྦྱོར། སྲུང་་དང་སྙན་རྩོམ་ལ་སོགས་པ་  སྤྱི་རིགས་སྣ་ཚོགས་སྦེ་ ཐོབ་ཚུགསཔ་ཨིན།</p>
+<p style="font-size: 25px;text-color:white;text-align: justify;margin-bottom:20px;"> ན་གཞོན་རིག་འཕེལ་གྱི་མི་སྡེ་བརྡ་བརྒྱུད་འགོ་བཙུགས་དགོ་མི་འདི་ཡང་གཙོ་བོ་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་རང་དབང་རང་བཙན་གྱི་སྲོག་ཤིང་། རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀ་ཆེན་བཞིའི་གྲས་ལས་ འབྲུག་པའི་ལམ་སྲོལ་ མི་ཉམས་གོང་འཕེལ་གཏང་ནིའི་དོན་ལུ་ རྒྱལ་ཡོངས་སྐད་ཡིག་རྫོང་ཁ་འདི་ཁག་ཆེ་ཤོས་ཅིག་ཨིན། དེ་འབདཝ་ལས་ ལས་རིམ་འདི་གིས་ ཕ་ལས་བུ་བརྒྱུད་དེ་ འབྲུག་པའི་རང་གཤིས་ལུ་ཡོད་པའི་སྐད་ཡིག་གཞན་དང་མ་འདྲཝ་ཅིག་ཡོད་མི་དེ་ མི་ཉམས་གོང་འཕེལ་དང་དར་ཁྱབ་གཏང་ནིའི་དོན་ལུ་ཨིན། གཉིས་པ། རང་གི་ལཱ་དང་འགན་ཁུར་གྱི་ཐད་ལས་འབད་རུང་ རྫོང་ཁའི་སློབ་སྟོན་པ་ཅིག་འབདཝ་ལས་ རྫོང་ཁའི་སྐད་ཡིག་དར་ཁྱབ་དང་གོང་འཕེལ་གཏང་ནིའི་དོན་ལུ་ འགན་ཁུར་ཐེབས་ཅིག་ཕོག་ཡོདཔ་ཨིན། གསུམ་པ། སློབ་ཕྲུག་ཚུ་ལུ་ རྫོང་ཁའི་སློབ་སྟོན་དང་འབྲེལ་བའི་མཐུན་རྐྱེན་ཚུ་ལངམ་སྦེ་སྤྲོད་ནི་དང་། ལྷབ་སྦྱང་གི་མཁོ་ཆས་ཚུ་ སྤྲོ་ཏོག་ཏོ་བཟོ་སྟེ་ རྫོང་ཁ་ལྷབ་སྦྱང་འབད་ནི་ལུ་སེམས་ཤུགས་བསྐྱེད་བཅུག་ནིའི་དོན་ལུ་ འགོ་འདྲེན་འཐབ་ཨིན།  དེ་ནང་ལས་ སློབ་དཔོན་དང་སློབ་ཕྲུག་གཉིས་ཆ་རའི་དོན་ལུ་ དགོས་མཁོ་ཆེ་བའི་ལྷབ་སྟོན་མཁོ་ཆས་དང་ སྟོན་ཆས་ཚུ་ རྫོང་ཁའི་ཐོག་ལུ་ ཐོབ་ཚུགསཔ་ཨིན། དེ་ཡང་ སློབ་དཔོན་ཚུ་ལུ་ཨིན་པ་ཅིན་ སློབ་སྟོན་འབད་བའི་སྐབས་ལུ་ མཁོ་ཆེ་བའི་ སྟོན་ཆས་དང་ སྦྱོང་ལཱ་འབ་ནིའི་དོན་ལུ་ ལཱ་ཤོག་ཚུ་ རང་གིས་སྦེ་བཅའ་སྒྲིག་རྐྱབ་མ་དགོ་པའི་ དེ་ནང་ལས་འཇམ་ཏོག་ཏོ་སྦེ་ཐོབ་ཚུགསཔ་ཨིན། སྟོན་ཆས་དང་སྦྱོང་ལཱའི་ལཱ་ཤོག་ཚུ་ཡང་ དོན་ཚན་དང་འཁྲིལ་ཏེ་ སློབ་རིམ་གྱི་གནས་ཚད་ལུ་གཞི་བཞག་སྟེ་བཟོ་ཡོདཔ་ཨིན། <br> དེ་བཟུམ་སྦེ་ སློབ་ཕྲུག་ཚུ་ལུ་ཨིན་པ་ཅིན་ དུས་རྒྱུན་གྱི་སློབ་ཁང་ནང་ལུ་ སློབ་དཔོན་གྱིས་སློབ་སྟོན་འབད་བའི་དོན་ཚན་ཚུ་ལུ་ རང་གི་ཤེས་ཡོན་རྒྱ་སྐྱེད་དང་ཁ་སྐོང་ལྷན་ཐབས་ཀྱི་དོན་ལུ་ སློབ་ཁང་ཆོས་རྒྱུགས་ཀྱི་དྲི་བ། སློབ་ཁང་ཟིན་བྲིས།  སྐད་ཡིག་དང་ཡིག་སྦྱོར། སྲུང་་དང་སྙན་རྩོམ་ལ་སོགས་པ་  སྤྱི་རིགས་སྣ་ཚོགས་སྦེ་ ཐོབ་ཚུགསཔ་ཨིན།</p>
 
 
 <div style="font-size:25px;text-align:center; bottom-margin";>
